# TSFP

TSFP/Interpreter/: Interpreter.cabal  readme.txt
TSFP/Interpreter/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
TSFP/Interpreter/src/: Main  Main.hi  Main.hs  main  main.hs  prog.txt
TSFP/Interpreter/src/Evaluation/: Applicative.hs  Big.hs  Normal.hs  Substitution.hs
TSFP/Interpreter/src/Syntax/: Expression.hi  Expression.hs  Grammar.hi  Grammar.hs  Parser.hi  Parser.hs
TSFP/Interpreter/src/Syntax/doc/: Parser.html  Syntax-Parser.html  doc-index.html  index-frames.html  index.html  mini_Parser.html  mini_Syntax-Parser.html
TSFP/Interpreter/src/Typing/: Inference.hs  Type.hs  Unification.hs
TSFP/Interpreter/test/: InterpreterTest.hs  Util.hs
TSFP/Interpreter/test/Evaluation/: ApplicativeTest.hs  BigTest.hs  NormalTest.hs  SubstitutionTest.hs
TSFP/Interpreter/test/Typing/: InferenceTest.hs  TypeTest.hs  UnificationTest.hs
TSFP/IntroSkel/: IntroSkel.cabal  readme.txt
TSFP/IntroSkel/src/: Basics.hs  Pics.hs
TSFP/IntroSkel/tests/: BasicsTest.hs  IntroTest.hs  PicsTest.hs
TSFP/Reader-Writer/: Reader.hs  Writer.hs
TSFP/TypesSkel/: TypesSkel.cabal  readme.txt
TSFP/TypesSkel/src/: Classes.hs  List.hs  NestedList.hs  Tree.hs
