name:           TypesSkel
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Mihnea

library
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall
  exposed-modules: 
                   Tree,
                   Classes,
                   List,
                   NestedList

